# kingress

./: .dockerignore  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  README.md.in  api.go  build  build.sh  cors-check  go-get-k8s  go.mod  go.sum  grpc.go  http-handler.go  http.go  https.go  log.go  main.go  modd.conf  oxy-handler.go  request.go  ssl-redirect.go
Godeps/: Godeps.json
config/: annotations.go  backend-options.go  backend.go  change.go  config.go
e2e/: e2e.go
k8s/: backends.go  config.go  endpoints.go  ingress.go  k8s.go  secrets.go  services.go
kubeclient/: client.go
proxier/: basic-handlers.go  cors-handler.go  doc.go  helpers.go  proxier.go
src/: http1.rs  lib.rs  main.rs  resolvers.rs
src/http1/: response.rs  status.rs  test.rs
src/resolvers/: cache.rs  dns.rs  kube.rs
utils/: gendoc.go
