[package]
name = "kingress"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
eyre = "0.6.12"
futures = "0.3.30"
futures-util = "0.3.30"
itertools = "0.13.0"
k8s-openapi = { version = "0.22.0", features = ["v1_24"] }
kube = { version = "0.93.1", features = ["client", "config", "openssl-tls", "runtime"], default-features = false }
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive", "rc"] }
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
warp = { version = "0.3.7", default-features = false }
