[package]
name = "kingress"
version = "2.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
eyre = "0.6.12"
fastrand = "2.3.0"
futures = "0.3.30"
k8s-openapi = { version = "0.22.0", features = ["v1_24"] }
kube = { version = "0.93.1", features = ["client", "config", "openssl-tls", "runtime"], default-features = false }
log = "0.4.22"
lru = "0.14.0"
openssl = { version = "0.10.72" }
serde = { version = "1.0.208", features = ["derive", "rc"] }
tokio = { version = "1.39.3", features = ["full"] }
tokio-openssl = "0.6.5"
warp = { version = "0.3.7", default-features = false }
